# inkibox

./: .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: clear_tracks_vias.py  constraint_footprint.py
src/inkibox/: __init__.py
src/inkibox/scripts/: calculate_footprint_area.py  constraint_footprint.py  toggle_copper_zone.py
