[project]
    name = "inkibox"
    version = "0.1.0"
    description = "Add your description here"
    readme = "README.md"
    authors = [{ name = "insleker", email = "bkinnightskytw@gmail.com" }]
    requires-python = ">=3.12"
    dependencies = [
        "iflow-mcp-kicad-mcp>=0.1.0",
        "kicad-python>=0.5.0",
        "kicad-sch-api>=0.5.6",
        "kikit>=1.7.2",
        "sexpdata>=1.0.2",
    ]

[dependency-groups]
    dev = ["pytest>=9.0.2", "ruff>=0.14.13"]


    [project.scripts]
        inkibox = "inkibox:main"

[build-system]
    requires = ["uv_build>=0.10.8,<0.11.0"]
    build-backend = "uv_build"
